--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "dom": "^0.0.3",
     "react": "^18.2.0",
     "react-apexcharts": "^1.4.0",
+    "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
