--- a/package.json
+++ b/package.json
@@ -6,16 +6,16 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.3.0",
     "@testing-library/user-event": "^13.5.0",
-    "apexcharts": "^3.36.1",
     "axios": "^1.1.3",
+    "date-fns": "^2.29.3",
     "dom": "^0.0.3",
     "react": "^18.2.0",
-    "react-apexcharts": "^1.4.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.3.0",
     "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
+    "recharts": "^2.1.16",
     "styled-components": "^5.3.5",
     "styled-reset": "^4.4.2"
   },
